--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /* line 5, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -65,4 +61,52 @@ a img {
 /* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
+}
+
+/* line 1, ../sass/_main.scss */
+body {
+  color: white;
+}
+
+/* line 5, ../sass/_main.scss */
+.bg {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background: url(../img/gradient-bg.png) center no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url("../fonts/Proxima Nova Thin.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 8, ../sass/_typography.scss */
+.test {
+  font-family: 'Proxima Nova thin', sans-serif;
+}
+
+/* line 1, ../sass/_button.scss */
+.button {
+  width: 120px;
+  padding: 20px 0;
+  border: 2px solid #FFFFFF;
+  border-radius: 4px;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  -webkit-box-shadow: inset 2px 2px 0 #eee,inset -2px -2px 0 #eee;
+  box-shadow: inset 2px 2px 0 #eee,inset -2px -2px 0 #eee;
+  -webkit-transition: all .4s ease-in;
+  transition: all .4s ease-in;
+}
+/* line 14, ../sass/_button.scss */
+.button:hover {
+  color: #1a1a1a;
+  -webkit-box-shadow: inset 2px 2px 0 #eee,inset -2px -240px 0 #eee;
+  box-shadow: inset 2px 2px 0 #eee,inset -2px -240px 0 #eee;
 }
